# EMISignalGenerator

./: .gitignore  Makefile  README.md  gen.sh
.github/workflows/: ccpp.yml
src/: CMakeLists.txt  brownrv.c  exponentialrv.c  laplace.c  pinkgen.c  uniformrv.c
